Added admin panel and functions
